sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: illegal start of simple expression
	}
        ^AlgInsertionSort:14: error: ')' expected but '}' found.
}
^